feat: adds main method and tweaks zoo and ZooArea for better use