@@ -1,29 +1,41 @@
-import java.util.ArrayList;
+
+import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 public class Zoo {
-    private String name;
-    private List<ZooArea> areas;
+    private final String name;
+    private final List<ZooArea> zooAreas;
 
-    public Zoo(String nombre) {
+    public Zoo(String name) {
         this.name = name;
-        this.areas = new ArrayList<>();
+        zooAreas = new LinkedList<>();
+    }
+
+    public String getName() {
+        return name;
     }
 
     public void addArea(ZooArea area) {
-        areas.add(area);
+        zooAreas.add(area);
     }
 
-    public void filterAreasWithMoreThanXAnimals(int x) {
-        List<ZooArea> areasFiltered = areas.stream()
-                .filter(area -> area.getAnimals().size() > x)
-                .collect(Collectors.toList());
+    public void printDetailsOfAnimalsInAreasWithMoreThan(int amountOfAnimals) {
+        List<ZooArea> filteredAreas = zooAreas.stream()
+                .filter(area -> area.getAnimals().size() > amountOfAnimals)
+                .toList();
 
-        for (ZooArea area : areasFiltered) {
-            System.out.println("Area with more than " + x + " animals:");
-            area.getAnimals().forEach(animal -> System.out.println(animal));
+        if (filteredAreas.isEmpty()) {
+            System.out.printf("No areas with more than %d animals found\n", amountOfAnimals);
+            return;
+        }
+
+        System.out.println("Area with more than " + amountOfAnimals + " animals: ");
+        for (ZooArea area : filteredAreas) {
+            System.out.println(area.getName() + ": ");
+            area.getAnimals().forEach(System.out::println);
         }
     }
+
 }
 
